--- a/reciepe.html
+++ b/reciepe.html
@@ -19,7 +19,7 @@
        <li>1/2 cup (120 ml) milk</li>
                  <hr>
     </ul>  
-             <div>  <img src="vanilla cake ingrid.jpg"  width="500px"/>  </div> 
+             <div>  <img src="vanilla cake ingrid.jpg"  width="200px"/>  </div> 
 
         <h2>Step-by-step Instructions</h2>   
         <ol>
@@ -36,7 +36,7 @@
         <hr>
         </ol> 
         <h3>After baking your cake should look like;</h3> <br> 
-        <img src="full vanilla cake .jpeg"/> <img src="vanilla-slice-.jpg"/>
+        <img src="full vanilla cake .jpeg" width="200px"/> <img src="vanilla-slice-.jpg" width="200px"/>
 
 <br><a href="https://www.sweetconfectionscakes.com">Click to order your cakes NOW!</a>
 
